<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <TextView
        android:id="@+id/txtTitRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/txtLaNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="52dp"
        android:text="@string/LbNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitRegistro" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/txtLaNombre"
        app:layout_constraintTop_toBottomOf="@+id/txtTitRegistro" />

    <TextView
        android:id="@+id/txtLaApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/LbApellido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLaNombre" />

    <EditText
        android:id="@+id/txtApellido"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Apellido"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/txtLaApellido"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <TextView
        android:id="@+id/txtLaDocumento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:text="@string/LbDocumento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLaApellido" />

    <EditText
        android:id="@+id/txtDocumento"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Documento"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/txtLaDocumento"
        app:layout_constraintTop_toBottomOf="@+id/txtApellido" />

    <TextView
        android:id="@+id/txtLbTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="52dp"
        android:text="@string/LbTelefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLaDocumento" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Telefono"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/txtLbTelefono"
        app:layout_constraintTop_toBottomOf="@+id/txtDocumento" />

    <Button
        android:id="@+id/btGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="192dp"
        android:onClick="Guardar"
        android:text="@string/Guardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLbTelefono" />

    <Button
        android:id="@+id/btConsultar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="172dp"
        android:onClick="Consultar"
        android:text="@string/Consultar"
        app:layout_constraintStart_toEndOf="@+id/btGuardar"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />

    <Button
        android:id="@+id/btEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="52dp"
        android:onClick="Eliminar"
        android:text="@string/Eliminar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btGuardar" />

    <Button
        android:id="@+id/btActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="52dp"
        android:onClick="Actualizar"
        android:text="@string/Actualizar"
        app:layout_constraintStart_toEndOf="@+id/btEliminar"
        app:layout_constraintTop_toBottomOf="@+id/btConsultar" />

    <TextView
        android:id="@+id/txtLbUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="72dp"
        android:text="@string/LbUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLbTelefono" />

    <TextView
        android:id="@+id/txtLbClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/LbPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLbUsuario" />

    <EditText
        android:id="@+id/txtUsuarior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Usuarior"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefono"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/txtClaver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuarior" />

</androidx.constraintlayout.widget.ConstraintLayout>