<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:text="@string/inicio" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:autofillHints="@string/usuario"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#78909C"
        android:textColorHint="#00838F" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:ems="48"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#032435"
        android:textColorHint="#00838F"
        android:autofillHints=""
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnIngreso"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:text="@string/Ingreso"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:text="@string/Registro"
            style="?android:attr/buttonBarButtonStyle" />


    </LinearLayout>


</LinearLayout>